--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,7 +3,7 @@ $border-width: 1px;
 $cell-font-size: 30px;
 $cell-padding: 10px;
 $num-font-family: arial, sans-serif;
-$cell-background: #eee;
-$cell-hover-color: pink;
+$white: #eee;
+$pink: pink;
 $days-in-week: 7;
 $animation-duration: 0.5s;
