--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -3,16 +3,15 @@
   flex-wrap: wrap;
   width: $calendar-width;
   gap: $gap;
-  margin-top: 200px;
+
 
   &__day {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    box-sizing: border-box;
     width: $day-size;
     height: $day-size;
-    border: 1px solid ;
+    border: 1px solid;
 
     background-color: $day-color;
     cursor: pointer;
@@ -27,20 +26,21 @@
   &--start-day {
     @each $day, $multiplyer in $days {
       &--#{$day} :first-child {
-        margin-left: $multiplyer * ($day-size + $gap);
+        margin-left: $multiplyer * ($day-size + $gap + 2px);
       }
     }
   }
 
-  @for $i from 1 through 31 {
-    .calendar__day:nth-child(#{$i})::after {
-      content: "#{$i}";
+  @for $dayNum from 1 through 31 {
+    .calendar__day:nth-child(#{$dayNum})::after {
+      content: "#{$dayNum}";
     }
   }
 
-  @for $i from 28 through 31 {
-    &--month-length--#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
+  @for $dayWeek from 28 through 31 {
+    &--month-length--#{$dayWeek} .calendar__day:nth-child(n + #{$dayWeek + 1}) {
       display: none;
     }
   }
 }
+
