--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,3 @@
-@import url(./blocks/calendar.scss);
-
-body {
-  margin: 40px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
+@import "./utils/variables";
+@import "./blocks/page";
+@import "./blocks/calendar";
