add transition variable

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -33,7 +33,7 @@
     cursor: pointer;
     border: 1px solid $color-black;
     background-color: $border-color;
-    transition: transform 0.5s ease-in;
+    transition: transform #{$transotion-duration} ease-in;
 
     &:hover {
       transform: translateY(-20px);
