--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,7 +1,7 @@
 $day-color: #eee;
-$day-font: "Arial", "Helvetica";
+$day-font: "Arial", "Helvetica", sans-serif;
+$column-count: 7;
 $day-font-size:  30px;
 $square-size: 100px;
 $gap: 1px;
 $days-of-week: ("mon" 0, "tue" 1, "wed" 2, "thu" 3, "fri" 4, "sat" 5, "sun" 6);
-
