--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -7,19 +7,27 @@
     flex-wrap: wrap;
     list-style: none;
     padding-left: 0;
-    width: (7 * $square-size) + 6 * $gap;
+    width: ($column-count * $square-size) + ($column-count - 1) * $gap;
 
     @for $day from 1 through 31 {
       & :nth-child(n + #{$day}):before {
         content: "#{$day}";
-        font-size: $day-font-size;
-        font-family: $day-font;
       }
     }
 
-    @for $i from 29 through 31 {
+    @for $i from 28 through 31 {
       &--month-length--#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
         display: none;
+      }
+    }
+
+    @each $day, $num in $days-of-week {
+      &--start-day--#{$day} {
+        @for $i from 0 through 6 {
+          & .calendar__day:first-child {
+            margin-left: calc((#{$square-size} + #{$gap}) * #{$num});
+          }
+        }
       }
     }
   }
@@ -31,9 +39,11 @@
     width: $square-size;
     height: $square-size;
     background-color: $day-color;
+    font-size: $day-font-size;
+    font-family: $day-font;
     border: 1px solid #000;
     box-sizing: border-box;
-    transition: background-color, transform 0.5s;
+    transition: background-color 0.5s, transform 0.5s;
 
     &:hover {
       background-color: #ffc0cb;
@@ -41,10 +51,5 @@
       transform: translateY(-20px);
     }
 
-    @each $day, $num in $days-of-week {
-      &--start-day--#{$day} {
-        margin-left: calcMargin($square-size, $gap, $num);
-      }
-    }
   }
 }
