fixed margin-left formula

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -25,7 +25,7 @@
       &--start-day--#{$day} {
         @for $i from 0 through 6 {
           & .calendar__day:first-child {
-            margin-left: calc((#{$square-size} + #{$gap}) * #{$num});
+            margin-left: calcMargin($square-size, $gap, $num)
           }
         }
       }
