--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,5 +1,6 @@
-.page {
-  margin: 40px;
+body {
+  // need margin-top for cells' hover transform
+  margin-top: 40px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 }
