--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -2,12 +2,11 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: $width;
+  width: $calendarWidth;
   padding: 10px;
   display: flex;
   flex-wrap: wrap;
   gap: $gap;
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
   transform: translate(-50%, -50%);
 
@@ -21,7 +20,7 @@
     box-sizing: border-box;
     border: 1px solid black;
     cursor: pointer;
-    transition: 0.5s;
+    transition: background-color 0.5s, transform 0.5s;
 
     @for $num from 1 through 31 {
       &:nth-child(#{$num})::before {
