--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,6 +1,6 @@
 $gap: 1px;
 $cell-size: 100px;
-$width: 7*($cell-size + $gap) + 20px;
+$calendarWidth: 7 * ($cell-size + $gap) + 20px;
 $week: (
   "mon": 0,
   "tue": $cell-size + $gap,
