--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,9 @@
-$day-block-size:100px;
-$gap-size:1px;
+@import "utils/variables";
+
+body {
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 .container {
   display: flex;
@@ -10,16 +14,14 @@ $gap-size:1px;
 
 .calendar {
   align-items: center;
-  gap: 1px;
+  gap: $gap-size;
   flex-wrap: wrap;
   display: flex;
   width: 720px;
   padding: 10px;
 
   &__day {
-    font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
-    font-size: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -28,35 +30,11 @@ $gap-size:1px;
     background-color: #eee;
     border: 1px solid black ;
     transition-duration: 500ms;
-  }
 
-  &__day:hover {
-    cursor: pointer;
-    background-color: pink;
-    transform: translateY(-20px);
-  }
-
-  @for $i from 1 through 31 {
-    &__day--#{$i}::before {
-      content: "#{$i}";
-    }
-  }
-
-  $days: "mon", "tue", "wed", "thu", "fri", "sat", "sun";
-  @each $day in $days {
-    $i: index($list: $days, $value: $day);
-    &--start-day--#{$day} {
-      & :first-child {
-        margin-left: $day-block-size * ($i - 1) + $gap-size * ($i - 1)  ;
-      }
-    }
-  }
-
-  @for $number from 28 through 31 {
-    &--month-length--#{$number} {
-      & :nth-child(n + #{$number + 1}) {
-        display: none;
-      }
+    &:hover {
+      cursor: pointer;
+      background-color: pink;
+      transform: translateY(-20px);
     }
   }
 }
