--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -6,8 +6,8 @@
   flex-wrap: wrap;
   gap: $gap-size;
 
-  @for $i from 28 through 31 {
-    &--month-length--#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
+  @for $day from 28 through 31 {
+    &--month-length--#{$day} .calendar__day:nth-child(n + #{$day + 1}) {
       display: none;
     }
   }
@@ -28,15 +28,12 @@
       z-index: 1;
     }
 
-    @for $n from 1 through 31 {
-      &:nth-child(#{$n})::before {
-        content: "#{$n}";
-        font-family: Arial, Helvetica, sans-serif;
+    @for $day from 1 through 31 {
+      &:nth-child(#{$day})::before {
+        content: "#{$day}";
         font-size: 30px;
-
         display: block;
         position: absolute;
-
         top: 50px;
         left: 50px;
         transform: translate(-50%, -50%);
