--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,18 +1,3 @@
-$day-measure: 100px;
-$gap-size: 1px;
-$days:
-  mon 0,
-  tue 1,
-  wed 2,
-  thu 3,
-  fri 4,
-  sat 5,
-  sun 6;
-
-@function currentShift($block, $gap, $index) {
-  @return $index * ($block + $gap);
-}
-
 .page {
   &__container {
     margin: 0;
@@ -20,5 +5,6 @@ $days:
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
   }
 }
