--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,13 @@
 @import "./utils/variables";
 
 @import "./blocks/calendar";
-@import "./blocks/day";
-@import "./blocks/daysNumbering";
-@import "./blocks/startDay";
-@import "./blocks/monthLength";
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
