--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,70 +1,3 @@
-$cell-size: 100px;
-$border-color: black;
-$border-width: 1px;
-$number-size: 30px;
-$gap: 1px;
-$padding: 10px;
-$days-in-week: 7;
-$animation-duration: 0.5s;
-$start-days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
-
-.main-container {
-  display: flex;
-  justify-content: center;
-}
-
-.calendar {
-  display: flex;
-  flex-wrap: wrap;
-  width: ($cell-size + $border-width + $gap) * $days-in-week + 2 * $padding;
-  padding: $padding;
-  gap: $gap;
-  background-color: white;
-  cursor: default;
-
-  @each $day, $order in $start-days {
-    &--start-#{$day} > :first-child {
-      margin-left: $order * ($cell-size + $border-width * 2 + $gap);
-    }
-  }
-
-  @for $i from 28 through 31 {
-    &--month-length-#{$i} {
-      .calendar__cell:nth-child(n + #{$i + 1}) {
-        display: none;
-      }
-    }
-  }
-
-  &__cell {
-    width: $cell-size;
-    height: $cell-size;
-    border: $border-width solid $border-color;
-    background-color: #eee;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-
-    &:nth-child(n + 1) {
-      counter-increment: day;
-    }
-
-    &::before {
-      content: counter(day);
-      font-family: Arial, sans-serif;
-      font-size: $number-size;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-
-    &:hover {
-      cursor: pointer;
-      background-color: pink;
-      transform: translateY(-20px);
-      transition: transform $animation-duration ease;
-    }
-  }
-}
+@import "../styles/blocks/variables.scss";
+@import "../styles/blocks/container.scss";
+@import "../styles/blocks/calendar.scss";
