corrected the problem

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,14 +1,21 @@
+$days-count: 7;
+$column-width: 100px;
+$column-heigh: 100px;
+$calendar-padding: 10px;
+$calendar-gap: 1px;
+$transition-duration: 0.5s;
+
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  width: calc(7 * 100px + 10px * 2);
+  width: $days-count * $column-width + $calendar-padding * 2;
   margin: 0 auto;
-  gap: 1px;
+  gap: $calendar-gap;
 
   &__day {
     box-sizing: border-box;
-    width: 100px;
-    height: 100px;
+    width: $column-width;
+    height: $column-heigh;
     border: 1px solid #000;
     background-color: #eee;
     font-family: Arial, sans-serif;
@@ -17,14 +24,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    transition-duration: 0.5s;
+    transition: background-color $transition-duration,
+      transform $transition-duration;
   }
 
   &__day:hover {
     background-color: #ffc0cb;
     transform: translateY(-20px);
     cursor: pointer;
-    transition-duration: 0.5s;
   }
 
   @for $i from 1 through 31 {
@@ -36,14 +43,14 @@
   $days: "mon" 0, "tue" 1, "wed" 2, "thu" 3, "fri" 4, "sat" 5, "sun" 6;
 
   @each $day, $number in $days {
-    &__start-day--#{$day} &__day:first-child {
-      margin-left: 101px * $number;
+    &--start-day--#{$day} &__day:first-child {
+      margin-left: ($column-width + $calendar-gap) * $number;
     }
   }
 
   @for $j from 28 through 31 {
-    &__month-length--#{$j} :nth-child(n+#{$j + 1}) {
-      visibility: hidden;
+    &--month-length--#{$j} :nth-child(n+#{$j + 1}) {
+      display: none;
     }
   }
 }
