--- a/src/styles/block/calendar.scss
+++ b/src/styles/block/calendar.scss
@@ -1,17 +1,9 @@
-$backroundColor: #eee;
-$cellSize: 100px;
-$cellGap: 1px;
-$calendarPadding: 10px;
-$cellFonts: "Arial", "Helvetica", sans-serif;
-
 .calendar {
   display: flex;
   flex-wrap: wrap;
   width: 7 * $cellSize + $calendarPadding * 2;
   padding: 10px;
   gap: 1px;
-
-  $days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
 
   @each $day, $number in $days {
     &--start--#{$day} &__cell:first-child {
@@ -40,7 +32,7 @@ $cellFonts: "Arial", "Helvetica", sans-serif;
   }
 
   &__cell:hover {
-    transform: translate(0, -20px);
+    transform: translateY(-20px);
     cursor: pointer;
     background-color: #f90483;
   }
