--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,3 @@
-@import url(/styles/block/body.scss);
-@import url(/styles/block/calendar.scss);
+@import "./utils/variables.scss";
+@import "./block/body.scss";
+@import "./block/calendar.scss";
