--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,4 @@
 /* stylelint-disable no-descending-specificity */
-/* stylelint-disable length-zero-no-unit */
 /* stylelint-disable rule-empty-line-before */
 .main-container {
   display: flex;
@@ -14,27 +13,6 @@
   gap: 1px;
   background-color: white;
   cursor: default;
-}
-.calendar--start-mon > :first-child {
-  margin-left: 0px;
-}
-.calendar--start-tue > :first-child {
-  margin-left: 103px;
-}
-.calendar--start-wed > :first-child {
-  margin-left: 206px;
-}
-.calendar--start-thu > :first-child {
-  margin-left: 309px;
-}
-.calendar--start-fri > :first-child {
-  margin-left: 412px;
-}
-.calendar--start-sat > :first-child {
-  margin-left: 515px;
-}
-.calendar--start-sun > :first-child {
-  margin-left: 618px;
 }
 .calendar--month-length-28 .calendar__cell:nth-child(n+29) {
   display: none;
@@ -75,4 +53,32 @@
   background-color: pink;
   transform: translateY(-20px);
   transition: transform 0.5s ease;
+}
+
+.calendar--start-mon > :first-child {
+  margin-left: 0;
+}
+
+.calendar--start-tue > :first-child {
+  margin-left: 103px;
+}
+
+.calendar--start-wed > :first-child {
+  margin-left: 205px;
+}
+
+.calendar--start-thu > :first-child {
+  margin-left: 308px;
+}
+
+.calendar--start-fri > :first-child {
+  margin-left: 410px;
+}
+
+.calendar--start-sat > :first-child {
+  margin-left: 513px;
+}
+
+.calendar--start-sun > :first-child {
+  margin-left: 615px;
 }/*# sourceMappingURL=main.css.map */
