--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -7,12 +7,6 @@
   background-color: $white__bg-color;
   cursor: default;
 
-  @each $day, $order in $start-days {
-    &--start-#{$day} > :first-child {
-      margin-left: $order * ($cell-size + $border-width * 2 + $gap);
-    }
-  }
-
   @for $i from 28 through 31 {
     &--month-length-#{$i} {
       .calendar__cell:nth-child(n + #{$i + 1}) {
@@ -52,4 +46,30 @@
       transition: transform $animation-duration ease;
     }
   }
+}
+
+@if $starting-day == mon {
+  $margin-left: 0;
+}
+@else if $starting-day == tue {
+  $margin-left: 102px;
+}
+@else if $starting-day == wed {
+  $margin-left: 205px;
+}
+@else if $starting-day == thu {
+  $margin-left: 308px;
+}
+@else if $starting-day == fri {
+  $margin-left: 410px;
+}
+@else if $starting-day == sat {
+  $margin-left: 513px;
+}
+@else if $starting-day == sun {
+  $margin-left: 615px;
+}
+
+.calendar--start-#{$starting-day} > :first-child {
+  margin-left: $margin-left;
 }
