--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,6 +1,6 @@
 .calendar {
   width: (7 * $day-measure) + 6 * $gap-size;
-  padding: 10px;
+  padding: 0px;
   list-style-type: none;
   display: flex;
   flex-wrap: wrap;
@@ -12,11 +12,16 @@
     }
   }
 
+  @each $day, $index in $days {
+    &--start-day--#{$day} .calendar__day:first-child {
+      margin-left: currentShift($day-measure, $gap-size, $index);
+    }
+  }
+
   &__day {
     position: relative;
     width: $day-measure;
     height: $day-measure;
-    box-sizing: border-box;
     border: 1px solid black;
     background-color: #eee;
     transition: all 0.5s;
@@ -37,12 +42,6 @@
         top: 50px;
         left: 50px;
         transform: translate(-50%, -50%);
-      }
-    }
-
-    @each $day, $index in $days {
-      &--start-day--#{$day} {
-        margin-left: currentShift($day-measure, $gap-size, $index);
       }
     }
   }
