--- a/src/styles/components/_calendar.scss
+++ b/src/styles/components/_calendar.scss
@@ -1,6 +1,6 @@
 .calendar {
   display: flex;
-  width: ($day-size * 7) + ($cell-gap * 6);
+  width: ($day-size * $week-long) + ($cell-gap * ($week-long - 1));
   padding: 10px;
   gap: $cell-gap;
   flex-wrap: wrap;
@@ -12,7 +12,7 @@
     }
   }
 
-  @for $day from 1 through $num-days {
+  @for $day from $min-month-long through $num-days {
     &--month-length--#{$day}>:NOT(:nth-child(-n+#{$day})) {
       display: none;
     }
@@ -25,7 +25,7 @@
     cursor: pointer;
     background-color: $color-day-main;
     border: $day-border;
-    transition: all 0.5s;
+    transition: transform 0.5s;
 
     &:hover {
       background-color: $color-day-hover;
@@ -33,7 +33,7 @@
     }
 
     @for $i from 1 through $num-days {
-      &--#{$i}::before {
+      &:nth-child(#{$i})::before {
         content: "#{$i}";
         display: block;
         text-align: center;
