changes for the calendar

--- a/src/styles/blocks.scss
+++ b/src/styles/blocks.scss
@@ -17,7 +17,7 @@
     font-family: $cellFonts;
     background-color: $backroundColor;
     box-sizing: border-box;
-    transition-duration: 1s;
+    transition: transform 0.5s, background-color 0.5s;
 
   }
 
@@ -44,8 +44,6 @@
   @for $date from 1 through 31 {
     &__cells:nth-child(#{$date})::before {
       content: "#{$date}";
-
     }
   }
-
 }
