--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -1,9 +1,11 @@
 
-$fontSize:30px;
+$days:7;
+$gapCount: $days - 1;
+$fontSize: 30px;
 $cellFonts: "Arial", "Helvetica", sans-serif;
 $cellSize: 100px;
 $gapSize: 1px;
 $paddings: 10px;
-$calSize: ($gapSize * 6) + ($cellSize * 7);
+$calSize: ($gapSize * $gapCount) + ($cellSize * $days);
 $days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
 $backroundColor: #eee;
