add task solution

--- a/src/styles/block/body.scss
+++ b/src/styles/block/body.scss
@@ -2,4 +2,7 @@ body {
   margin: 0;
   display: flex;
   justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  font-family: $cellFonts;
 }
