--- a/src/styles/block/calendar.scss
+++ b/src/styles/block/calendar.scss
@@ -20,21 +20,17 @@
   &__cell {
     display: flex;
     justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    font-family: $cellFonts;
-    box-sizing: border-box;
     background-color: $backroundColor;
     width: $cellSize;
     height: $cellSize;
     border: 1px solid #000;
     transition-duration: 0.5s;
-  }
 
-  &__cell:hover {
-    transform: translateY(-20px);
-    cursor: pointer;
-    background-color: #f90483;
+    &:hover {
+      transform: translateY(-20px);
+      cursor: pointer;
+      background-color: #f90483;
+    }
   }
 
   @for $days from 1 through 31 {
