--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,58 +1,58 @@
-.calendar {
+.main {
   padding: $padding;
   display: flex;
   justify-content: center;
+}
+
+.calendar-sheet {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: $sheet-with;
+  gap: $gap-size;
 
   @each $name, $num in $days-in-week {
-    &--start-day--#{$name} > {
-      .calendar__sheet > :first-child {
+    &--start-#{$name} {
+      & > :first-child {
         margin-left: $cell-size * ($num - 1) + $gap-size * ($num - 1);
       }
     }
   }
 
-  @for $n from 28 to 32 {
-    &--month-length--#{$n} {
-      .calendar__sheet > :not(:nth-child(-n + #{$n})) {
+  @for $num from 28 through 31 {
+    // num - number of each day in month
+    &--month-#{$num} {
+      & > :not(:nth-child(-n + #{$num})) {
         display: none;
       }
     }
   }
 
-  &__sheet {
+  &__cell {
+    position: relative;
     display: flex;
-    flex-wrap: wrap;
-    max-width: $sheet-with;
-    gap: $gap-size;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    height: $cell-size;
+    width: $cell-size;
+    background-color: #eee;
+    border: 1px solid #000;
+    color: #000;
+    font-family: $number-font;
+    font-size: $number-font-size;
+    transition: $transitionDuration linear;
 
-    &-cell {
-      position: relative;
-      display: flex;
-      justify-content: space-around;
-      box-sizing: border-box;
-      height: $cell-size;
-      width: $cell-size;
-      background-color: #eee;
-      border: 1px solid #000;
-      color: #000;
-      font-family: $number-font;
-      font-size: $number-font-size;
-      transition: transform $transitionDuration;
-
-      &:hover {
-        cursor: pointer;
-        background-color: pink;
-        transform: translate(0, -20px);
-      }
+    &:hover {
+      cursor: pointer;
+      background-color: pink;
+      transform: translate(0, -20px);
     }
+  }
 
-    @for $i from 1 to 32 {
-      &>:nth-child(#{$i})::before {
-        content: "#{$i}";
-        position: absolute;
-        top: $number-font-position;
-        height: $number-font-size;
-      }
+  @for $num from 1 through 31 {
+    // num - number of each day in month
+    & > :nth-child(#{$num})::before {
+      content: "#{$num}";
     }
   }
 }
