--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,5 +8,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
