--- a/src/styles/components/_page.scss
+++ b/src/styles/components/_page.scss
@@ -1,6 +1,11 @@
+* {
+  box-sizing: border-box;
+}
+
 body,
 ul {
   margin: 0;
+  padding: 0;
 }
 
 html {
@@ -8,7 +13,8 @@ html {
 }
 
 .page {
-  &__calendar {
-    margin: 0 auto;
-  }
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
+
 }
