--- a/src/styles/components/_variables.scss
+++ b/src/styles/components/_variables.scss
@@ -1,6 +1,5 @@
 $num-days: 31;
 $week-long: 7;
-$min-month-long: 28;
 $color-day-main: #eee;
 $color-day-hover: #ffbfcb;
 $color-day-number: black;
@@ -8,5 +7,5 @@ $day-size: 100px;
 $day-border:  1px solid black;
 $day-font-size: 30px;
 $cell-gap: 1px;
-$week-days: ("mon" : 0, "teu" : 1, "wed" : 2,
-"thu" : 3, "fri" : 4, "sat" : 5, "sun" : 6);
+$week-days: (mon : 0, teu : 1, wed : 2,
+thu : 3, fri : 4, sat : 5, sun : 6);
