rewrite code by using CSS rule

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,22 +14,22 @@ body {
 
   &__day {
     display: flex;
-    box-sizing: border-box;
-    background-color: #eee;
-    border: #000 solid 1px;
-    width: 100px;
-    height: 100px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
-    color: #000;
     justify-content: center;
     align-items: center;
-    text-align: center;
     transition: transform 0.5s ease;
+    border: $black solid 1px;
+    box-sizing: border-box;
+    width: 100px;
+    height: 100px;
+    background-color: $white;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    color: $black;
 
     &:hover {
       transform: translateY(-20px);
-      background-color: pink;
+      background-color: $pink;
       cursor: pointer;
     }
   }
