--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,71 +1,2 @@
-$cell-size: 100px;
-$cell-color: #eee;
-$cell-hover: pink;
-$month-length-28: 28;
-$month-length-29: 29;
-$month-length-30: 30;
-$month-length-31: 31;
-$days:
-  "mon" 0,
-  "tue" 1,
-  "wed" 2,
-  "thu" 3,
-  "fri" 4,
-  "sat" 5,
-  "sun" 6;
-
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  font-size: 30px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.calendar {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 7 * $cell-size + 10px;
-  gap: 1px;
-
-  &__day {
-    @for $index from 1 through 31 {
-      &:nth-child(#{$index})::before {
-        content: "#{$index}";
-        display: flex;
-        box-sizing: border-box;
-        align-items: center;
-        justify-content: center;
-        border: 1px solid black;
-        width: $cell-size;
-        height: $cell-size;
-        background-color: $cell-color;
-      }
-
-      &:hover::before {
-        cursor: pointer;
-        background-color: $cell-hover;
-        transition: 0.5s;
-        transform: translateY(-20px);
-      }
-    }
-  }
-
-  @for $month-length from 28 through 31 {
-    &--month-length--#{$month-length} {
-      .calendar__day:nth-child(n + #{$month-length + 1}) {
-        display: none;
-      }
-    }
-  }
-
-  @each $name, $day in $days {
-    &--start-day--#{$name} {
-      .calendar__day:first-child {
-        margin-left: $day * $cell-size + $day;
-      }
-    }
-  }
-}
+@import "./utils/variables.scss";
+@import "./sass-styles/sass-styles.scss";
