--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -2,6 +2,7 @@ $cell-size: 100px;
 $cell-rows: 7;
 $cell-gap: 1px;
 $gaps-in-row: $cell-rows - 1;
+$cell-color: #eee;
 $start-day:(
   "mon": 0,
   "tue": 1,
