add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,7 @@
 @import "utils/variables";
+@import "blocks/calendar__day";
+@import "blocks/calendar--month-length";
+@import "blocks/calendar--start-day";
 
 body {
   font-size: 30px;
@@ -10,31 +13,4 @@ body {
   justify-content: center;
   align-items: center;
   padding-top: 50px;
-}
-
-.calendar {
-  align-items: center;
-  gap: $gap-size;
-  flex-wrap: wrap;
-  display: flex;
-  width: 720px;
-  padding: 10px;
-
-  &__day {
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: $day-block-size;
-    width: $day-block-size;
-    background-color: #eee;
-    border: 1px solid black ;
-    transition-duration: 500ms;
-
-    &:hover {
-      cursor: pointer;
-      background-color: pink;
-      transform: translateY(-20px);
-    }
-  }
 }
