add task solution

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,11 +1,10 @@
 .calendar {
-  $cell-side: 100px;
-  $borders: 1px;
-  max-width: 8 * $cell-side;
+  max-width: ($day-in-week * $cell-side) + ($gaps-total * $borders);
   padding: $cell-side;
   display: flex;
   gap: $borders;
   flex-wrap: wrap;
+
 
   &__day {
     box-sizing: border-box;
@@ -16,20 +15,30 @@
     align-items: center;
     background-color: #eee;
     border: $borders solid black;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
     transition: transform 0.5s;
 
     &:hover {
-      background-color: pink;
       transform: translateY(-20px);
       cursor: pointer;
-    }
-  }
+      animation: colorChange 0.5s ease-in alternate both;
 
-  @for $i from 1 through 31 {
-    &__#{$i}::before {
-      content: "#{$i}";
-      font-size: 30px;
-      font-family: Arial, Helvetica, sans-serif;
+      @keyframes colorChange {
+        from {
+          background-color: #eee;
+        }
+
+        to {
+          background-color: pink;
+        }
+      }
+    }
+
+    @for $number from 1 through 31 {
+      &:nth-child(#{$number}):before {
+        content: "#{$number}";
+      }
     }
   }
 
@@ -43,14 +52,14 @@
     sun 606px;
 
   @each $start-day, $start-day-margin in $start-days {
-    &-start-day--#{$start-day} .calendar__day:first-child {
+    &--start-day--#{$start-day} .calendar__day:first-child {
       margin-left: $start-day-margin;
     }
   }
 
   @for $last-day from 28 through 31 {
     $first-dissepear: $last-day + 1;
-    &-month-length--#{$last-day} {
+    &--month-length--#{$last-day} {
       .calendar__day:nth-child(n + #{$first-dissepear}) {
         display: none;
       }
