--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,15 @@
+@import "/styles/utils/variables-calendar.scss";
+
+@import "/styles/blocks/calendar-block.scss";
+
+/* #region page-settings*/
+html {
+  font-family: "Arial", sans-serif;
+  font-size: 30px;
+  width: $max-width;
+}
+
 body {
   margin: 0;
 }
+/* #endregion*/
