--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,14 +2,15 @@
 
 @import "/styles/blocks/calendar-block.scss";
 
-/* #region page-settings*/
 html {
   font-family: "Arial", sans-serif;
   font-size: 30px;
-  width: $max-width;
 }
 
 body {
+  height: 100vh;
   margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-/* #endregion*/
