--- a/src/styles/blocks/calendar-block.scss
+++ b/src/styles/blocks/calendar-block.scss
@@ -26,8 +26,9 @@
     border: $border-width solid $border-color;
     position: relative;
     flex-shrink: 0;
-    transition: transform $transformation-time;
-    transition-property: background-color;
+
+    transition: transform $transformation-time,
+      background-color $transformation-time;
 
     &:hover {
       cursor: pointer;
