--- a/src/styles/blocks/calendar-block.scss
+++ b/src/styles/blocks/calendar-block.scss
@@ -14,7 +14,7 @@
   }
 
   @for $last-day from 28 through 31 {
-    &--month-length--#{$last-day} :nth-child(#{$last-day + 1} + n) {
+    &--month-length--#{$last-day} :nth-child(n + #{$last-day + 1}) {
       display: none;
     }
   }
