--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,15 @@
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  font-style: normal;
+}
 
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .calendar {
