--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,25 @@
 $block-size: 100px;
 $day-block-gap: 1px;
 $hover-color: pink;
+$calendar-background-color: #eee;
+$calendar-border-color: black;
+$days-of-week: (
+  "mon" 0,
+  "tue" 1,
+  "wed" 2,
+  "thu" 3,
+  "fri" 4,
+  "sat" 5,
+  "sun" 6,
+);
 
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .calendar {
@@ -15,8 +30,8 @@ body {
   gap: $day-block-gap;
 
   &__day {
-    background-color: #eee;
-    border: 1px solid black;
+    background-color: $calendar-background-color;
+    border: 1px solid $calendar-border-color;
     display: block;
     height: $block-size;
     width: $block-size;
@@ -45,16 +60,6 @@ body {
       visibility: hidden;
     }
   }
-
-  $days-of-week: (
-    "mon" 0,
-    "tue" 1,
-    "wed" 2,
-    "thu" 3,
-    "fri" 4,
-    "sat" 5,
-    "sun" 6,
-  );
 
   @each $day, $number in $days-of-week {
     &--start-day--#{$day} :first-child {
