--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,30 @@
 body {
   margin: 0;
 }
+
+.calendar {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
+
+.calendar__field {
+  padding: 10px;
+  display: flex;
+  // align-items: center;
+  flex-wrap: wrap;
+  gap: 1px;
+  width: 706px;
+}
+
+.calendar__day {
+  height: 100px;
+  width: 100px;
+  background-color: #eee;
+  border: 1px solid #000;
+  box-sizing: border-box;
+}
+
