--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,36 @@
+$first-day: 1;
+$full-day: 31;
+
 body {
   margin: 0;
+}
+
+.calendar {
+  display: grid;
+  grid-template-columns: repeat(7, 100px);
+  gap: 1px;
+}
+
+.start-day {
+  cursor: pointer;
+  background-color: #eee;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  border: 1px solid #000;
+  box-sizing: border-box;
+  @for $i from $first-day through $full-day {
+    &:nth-child(1n + #{$i})::before {
+      content: "#{$i}";
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 30px;
+    }
+  }
+  &:hover {
+    transition: all 0.5s ease 0s;
+    transform: translate(0, -20px);
+    background-color: pink;
+  }
 }
