add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,9 +6,12 @@ body {
 }
 
 .calendar {
+  height: 100vh;
   display: grid;
-  grid-template-columns: repeat(7, 100px);
+  grid-template-columns: repeat(7,100px);
   gap: 1px;
+  justify-content: center;
+  align-content: center;
 }
 
 .start-day {
