add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,7 @@
+$color-pink: #ffc0cb;
+$color-black: #000;
+$color-grey: #eee;
+$size-px: 100px;
 $first-day: 1;
 $full-day: 31;
 
@@ -16,13 +20,13 @@ body {
 
 .start-day {
   cursor: pointer;
-  background-color: #eee;
+  background-color: $color-grey;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100px;
-  height: 100px;
-  border: 1px solid #000;
+  width: $size-px;
+  height: $size-px;
+  border: 1px solid $color-black;
   box-sizing: border-box;
   @for $i from $first-day through $full-day {
     &:nth-child(1n + #{$i})::before {
@@ -34,6 +38,6 @@ body {
   &:hover {
     transition: all 0.5s ease 0s;
     transform: translate(0, -20px);
-    background-color: pink;
+    background-color: $color-pink;
   }
 }
