change color variables names

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -9,7 +9,7 @@
     width: #{$cell-size};
     height: #{$cell-size};
     border: #{$border-width} solid black;
-    background-color: #{$white};
+    background-color: #{$color-white};
     display: flex;
     align-items: center;
     justify-content: center;
@@ -27,7 +27,7 @@
   }
 
   &__day:hover {
-    background-color: #{$pink};
+    background-color: #{$color-pink};
     transform: translateY(-20px);
   }
 }
