--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,65 @@
+$item-size: 100px;
+$block-height: 100px;
+$total-items: 31; //set the total days
+$gap: 1px;
+$start-days: (
+  mon: 0,
+  tue: 1,
+  wed: 2,
+  thu: 3,
+  fri: 4,
+  sat: 5,
+  sun: 6
+);
+
 body {
-  margin: 0;
+  display: flex;
+  margin: 30px;
+  justify-content: center;
+}
+
+.block {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap;
+  box-sizing: border-box;
+  width: ($item-size + $gap) * 7;
+
+  &__day {
+    @each $day, $margin-left in $start-days {
+      &.start-day-#{$day} {
+        margin-left: ($margin-left * ($item-size + $gap));
+      }
+    }
+
+    @for $i from 1 through $total-items {
+      &:nth-child(#{$i}) {
+        width: $item-size;
+        height: $item-size;
+        background-color: #eee;
+        border: 1px solid black;
+        box-sizing: border-box;
+        position: relative;
+      }
+
+      &:hover {
+        cursor: pointer;
+        background-color: pink;
+        transition: all 0.5s ease;
+        transform: translateY(-20px);
+      }
+
+      &:nth-child(#{$i})::before {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30px;
+        justify-content: center;
+        align-items: center;
+        content: $i + "";
+      }
+    }
+  }
+
 }
