--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -46,7 +46,8 @@ $days: (
   .start-day--#{$day} {
     .calendar__day {
       &:nth-child(#{$index}n) {
-        margin-left: calc(#{$index - 1} * (#{$cell-size} + #{$border-width} + 2 * #{$cell-padding}));
+        margin-left: calc(#{$index - 1} * (#{$cell-size} +
+        #{$border-width} + 2 * #{$cell-padding}));
       }
     }
   }
