--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,14 @@ $monthDays: 31;
 $cell-size: 100px;
 $padding: 10px;
 $gap: 1px;
+$start-day:
+  mon 1,
+  tue 2,
+  wed 3,
+  thu 4,
+  fri 5,
+  sat 6,
+  sun 7;
 
 body {
   margin: 0;
@@ -25,8 +33,8 @@ body {
     width: $cell-size;
     border: 1px solid #000;
     background-color: #eee;
-
     transition: transform 0.5s;
+    transition-property: transform, background-color;
 
     @for $i from 1 through $monthDays {
       &:nth-child(#{$i})::before {
@@ -46,15 +54,6 @@ body {
       display: none;
     }
   }
-
-  $start-day:
-    mon 1,
-    tue 2,
-    wed 3,
-    thu 4,
-    fri 5,
-    sat 6,
-    sun 7;
 
   @each $day, $number in $start-day {
     &--start-day--#{$day} :first-child {
