--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,17 +5,11 @@ body {
 
 .calendar {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  gap: $gap-size;
   font-size: 30px;
-
-  &__field {
-    display: flex;
-    flex-wrap: wrap;
-    gap: $gap-size;
-    width: 7 * $cell-size + 10px;
-  }
+  flex-wrap: wrap;
+  width: 7 * $cell-size + 10px;
+  margin: 100px auto;
 
   &__day {
     @for $i from 1 through 31 {
